2A/05_Projet_GL/src/test/deca/context/valid/complet/70_select_protected_this.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {
    protected int x ; 
}


class B extends A {
    
    int b = this.x ; 
}